--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
 #    url: /portfolio/
         
   - title: "Blog"
-    url: /year-archive/
+    url: /
     
 #  - title: "CV"
 #    url: /cv/
